# Multi_ai_agent

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
app/: __init__.py  main.py
app/backend/: api.py
app/common/: __init__.py  custom_exception.py  logger.py
app/config/: settings.py
app/core/: __init__.py  ai_agent.py
app/frontend/: ui.py
custom_jenkins/: Dockerfile
