[project]
name = "multi-ai-agent"
version = "0.1.0"
description = "Multi-agent supervisor team (researcher, analyst, writer) with Groq, Tavily, FastAPI, and Streamlit"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain-groq==0.1.9",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langgraph==0.1.19",
    "python-dotenv==1.0.1",
    "uvicorn==0.30.3",
    "fastapi==0.111.1",
    "pydantic==2.7.4",
    "streamlit==1.37.1",
    "requests>=2.32.0",
]

[project.scripts]
multi-ai-agent = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
